# staticmon

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  setup.sh
cmake/: lexy.cmake  staticmon-launcher.in
docker/: behavioral.Dockerfile  monpoly-exp-modern-ocaml.patch  oracle.Dockerfile  staticmon-entrypoint.sh
docs/: LFTJ-STATICMON.md  explicitmon-pipeline.md  monpoly-grammar.md  optimization-plan.md
experiments/baselines/201b8f7/: frz_staticmon_monpoly.csv  frz_staticmon_premerge_master.csv
experiments/baselines/9e0d2e8/: genjoin_j4.csv
experiments/baselines/b8f06bf/: frz_staticmon_monpoly_verimon.csv  frz_staticmon_premerge_master.csv
experiments/genjoin/: gen_triangle.py  gen_xshared.py
experiments/runner/: gen_config.py  plot.R  prepare_results.py  profile.py  summarize.py  translate.py
experiments/runner/edge_corpus/: bench.py  formulas  plot.R  results.csv  sig
experiments/runner/lib/: BenchmarkRunner.hs  EventGenerators.hs  Flags.hs  Monitors.hs
scripts/: install-docker.sh  regen-test-fixtures.sh  staticmon  staticmon-build  staticmon-impl
src/: CMakeLists.txt  staticmon.cpp
src/staticmon/compile/: desugar.h  emit_headers.h  exformula.h  free_vars.h  monitorable.h  monpoly_normalize.h  translate.h  typing.h
src/staticmon/file_input/: file_monitor_driver.h
src/staticmon/file_input/parser/: trace_parser.h
src/staticmon/input_formula/: formula.h
src/staticmon/monitor/: monitor.h
src/staticmon/operators/: operators.h
src/staticmon/operators/detail/: aggregations.h  mfrz.h  mgenjoin.h  mterm.h  verdict_printer.h
src/staticmon/parser/: formula_ast.h  formula_lexer.h  formula_parser.h  print_formula.h  sexp_printer.h  sig_parser.h
src/staticmon/socket_input/: uds_monitor_driver.h
src/tools/: parser_dump.cpp  staticmon-headers.cpp  staticmon_compile.cpp
test/: CMakeLists.txt  ctest-bench-down.sh  ctest-bench-up.sh  replay_cases.sh
test/behavioral/: compare_verdicts.py  gen_bench.py  regen.sh  run_behavioral.sh
test/behavioral/cases/f003_t1/: formula
test/behavioral/cases/f004_t0/: formula
test/behavioral/cases/f006_t0/: expected
test/behavioral/cases/f006_t1/: expected
test/behavioral/cases/f007_t0/: expected
test/behavioral/cases/f008_t0/: expected
test/behavioral/cases/f008_t1/: formula
test/behavioral/cases/f009_t1/: expected  formula
test/behavioral/cases/f010_t1/: expected  formula
test/behavioral/cases/f011_t1/: expected
test/behavioral/cases/f012_t0/: formula
test/behavioral/cases/f012_t1/: expected
test/behavioral/cases/f016_t0/: formula
test/behavioral/cases/f016_t1/: expected
test/behavioral/cases/f017_t0/: expected
test/behavioral/cases/f017_t1/: expected
test/behavioral/cases/f018_t0/: expected
test/behavioral/cases/f018_t1/: expected
test/behavioral/cases/f019_t0/: expected
test/behavioral/cases/f019_t1/: expected
test/behavioral/cases/f020_t0/: expected  formula
test/behavioral/cases/f020_t1/: expected
test/behavioral/cases/f021_t0/: expected
test/behavioral/cases/f022_t1/: expected
test/behavioral/cases/f023_t0/: formula
test/behavioral/cases/f023_t1/: expected
test/behavioral/cases/f024_t1/: formula
test/behavioral/cases/f026_t0/: expected
test/behavioral/cases/f026_t1/: expected  formula
test/behavioral/cases/f028_t1/: expected
test/behavioral/cases/f032_t1/: formula
test/behavioral/cases/f033_t0/: expected
test/behavioral/cases/f033_t1/: expected  sig
test/behavioral/cases/f035_t0/: expected  formula
test/behavioral/cases/f035_t1/: expected
test/behavioral/cases/f036_t0/: expected
test/behavioral/cases/f037_t0/: expected
test/behavioral/cases/f037_t1/: formula
test/behavioral/cases/f038_t0/: expected
test/behavioral/cases/f038_t1/: formula
test/behavioral/cases/f039_t1/: expected  formula
test/behavioral/cases/f041_t0/: formula
test/behavioral/cases/f041_t1/: expected
test/behavioral/cases/f042_t1/: formula
test/behavioral/cases/f043_t1/: expected  formula
test/behavioral/cases/f044_t0/: expected
test/behavioral/cases/f044_t1/: expected
test/behavioral/cases/f045_t1/: formula
test/behavioral/cases/f046_t0/: formula
test/behavioral/cases/f047_t0/: expected
test/behavioral/cases/f049_t0/: expected
test/behavioral/cases/f049_t1/: expected  formula
test/behavioral/cases/f050_t0/: formula
test/behavioral/cases/f051_t0/: expected
test/behavioral/cases/f052_t0/: formula
test/behavioral/cases/f053_t1/: formula
test/behavioral/cases/f054_t0/: formula
test/behavioral/cases/f055_t0/: expected  formula
test/behavioral/cases/f055_t1/: expected
test/behavioral/cases/f056_t0/: expected
test/behavioral/cases/f057_t0/: formula
test/behavioral/cases/f058_t0/: expected
test/behavioral/cases/f059_t0/: expected  formula
test/behavioral/cases/f060_t0/: expected  trace
test/behavioral/cases/f060_t1/: expected
test/behavioral/cases/f062_t0/: expected
test/behavioral/cases/f062_t1/: expected  formula
test/behavioral/cases/f064_t0/: expected
test/behavioral/cases/f064_t1/: expected
test/behavioral/cases/f065_t0/: expected
test/behavioral/cases/f066_t0/: formula
test/behavioral/cases/f066_t1/: expected
test/behavioral/cases/f070_t0/: expected
test/behavioral/cases/f070_t1/: expected
test/behavioral/cases/f073_t1/: formula
test/behavioral/cases/f076_t1/: formula
test/behavioral/cases/f077_t0/: expected
test/behavioral/cases/f078_t0/: formula
test/behavioral/cases/f079_t0/: formula
test/behavioral/cases/f079_t1/: expected
test/behavioral/cases/f080_t1/: expected
test/frontend/components/generator/: gen_formulas.py
test/frontend/components/oracle/: README.md
test/monitor/components/: comparator.py  coverage.py  ctest-bench-up.sh  replay_cases.sh
test/monpoly_suite/: extract_tests.py  regen.sh  run_suite.sh
test/parser_diff/: expected.txt  gen_corpus.py  regen.sh  run_diff.sh
test/parser_oracle/: oracle.ml
test/pipeline_diff/: gen_formulas.py  regen.sh  run_check_diff.sh  run_header_diff.sh
test/random_diff/: features.py  run.py
(+771 files in other folders)
